Fixed bug #24837 Incorrect behaviour of PPP using foreach.